--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       # Checkout the branch that triggered the workflow.
       - name: Checkout
-        uses: actions/checkout@dev
+        uses: actions/checkout@v2.0.0
 
       # Run your build step
       - name: Build
